src/objects/Chain__c.object
<CustomObject>
    <fields>
        <fullName>ChainURL__c</fullName>
        <description>Click here to launch the chain</description>
        <inlineHelpText>Click here to launch the chain</inlineHelpText>
        <label>Chain URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ChainUpdateTime__c</fullName>
        <label>Chain Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Chain_External_User__c</fullName>
        <label>Chain External User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Owner__c</fullName>
        <label>Chain Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTemplate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>oci_chain_id__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Outcome Chain</label>
    <nameField>
        <label>Chain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcome Chains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>